[tool.poetry]
name = "toss_gpu"
version = "0.1.0"
description = ""
authors = ["seanyu <seanyu@aetherai.com>"]

[tool.poetry.dependencies]
python = "^3.7"
GPUtil = "^1.4"
click = ">=8.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"

[tool.poetry.scripts]
toss-gpu = "toss_gpu.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
